# SAAS-AI-AGENTS-LONG-TERM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.postgres  GOOGLE_WORKSPACE_MCP.md  Makefile  PROGRESS.md  PROJECT_BRIEF.md  README.md  alembic.ini  deploy_dev.sh  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-prod.yaml  pyproject.toml
.github/workflows/: deploy-dev.yml
docs/: agent-memory-graph.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: e2e_provider_test.py  e2e_setup.py  e2e_test.py  test_approval_flow.py  test_developer_agent.py  test_finance_app_task.py  test_google_workspace_mcp.py  test_memory_graph.py  test_orchestrator_agent.py  test_slack_mcp.py  test_team_agent_configs.py
src/: app_context.py  clients.py
src/agent_tools/: permission_gate.py
src/agents/: README.md  __init__.py  base.py  base_agent.py  sdk_agent.py
src/api/: app.py  dependencies.py  deps.py  errors.py  middleware.py
src/common/: __init__.py  crypto.py  exceptions.py  json_utils.py  retry.py
src/config/: constants.py  settings.py
src/credentials/: __init__.py  audit.py  exceptions.py  resolver.py  service.py
src/db/: __init__.py  base.py  password_provider.py  session.py
src/engine/: __init__.py  broadcaster.py  executor.py  graph_builder.py  prompt_assembler.py  registry.py  state.py  tool_loop.py
src/integrations/: README.md  __init__.py  registry.py
src/memory/: __init__.py  chunkers.py  embeddings.py  entity_extractor.py  episodic.py  graph_writer.py  manager.py  mcp_server.py  retrieval.py  semantic.py
src/services/: __init__.py  agent_config_service.py  agent_service.py  auth_service.py  aws_mcp_proxy_service.py  chat_session_service.py  oauth_service.py  project_service.py  task_service.py  webhook_service.py
src/tools/: __init__.py  agent_toolkit.py  toolbox.py  tools_registry.py
src/utils/: broadcaster.py  crypto.py  (+4 more)
tests/: conftest.py
(+270 files in other folders)
